# datafusion-query-debug

./: .gitignore  Cargo.toml  README.md
src/: context.rs  discovery.rs  main.rs  output.rs  stats.rs  table.rs
