[package]
name = "datafusion-parquet-query"
version = "0.1.0"
edition = "2021"
description = "DataFusion utility to query parquet files across multiple shards"

[dependencies]
# DataFusion dependencies (same versions as OpenSearch plugin)
datafusion = "51.0.0"
arrow = { version = "57.0.0", features = ["ffi", "ipc_compression"] }


# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"



# Memory allocator
mimalloc = { version = "0.1", optional = true, default-features = false }
libmimalloc-sys = { version = "0.1", optional = true }

[features]
default = ["mimalloc"]
mimalloc_extended = ["libmimalloc-sys/extended"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
incremental = true
